# renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Renderer.cpp  Renderer.h  asset.gltf  readme.md  susanne.blend
render_lib/: CMakeLists.txt  rl_create_buffer.cpp  rl_create_command_buffers.cpp  rl_create_command_pool.cpp  rl_create_framebuffers.cpp  rl_create_graphics_pipeline.cpp  rl_create_image_views.cpp  rl_create_index_buffer.cpp  rl_create_logical_device.cpp  rl_create_render_pass.cpp  rl_create_surface.cpp  rl_create_swapchain.cpp  rl_create_sync_objects.cpp  rl_create_vertex_buffer.cpp  rl_draw_frame.cpp  rl_init.cpp  rl_pick_physical_device.cpp  rl_render_lib.h  rl_validation.cpp
shaders/: shader.vert  vertex.glsl
